fix hero layout issue.

--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,31 @@ h3{
     text-align: center;
 }
 
+@media screen and (min-width:600px){
+    body{
+        font-size:2rem;
+    }
+    h1{
+        font-size:6rem;
+    }
+    h2{
+        font-size:3.998rem;
+    }
+    h3{
+        font-size:2.827rem;
+    }
+    .lead{
+        font-size: 2rem;
+    }
+    .lead-second{
+        font-size:1.8rem;
+      padding-top:5rem;
+    }
+}
+
 @media screen and (min-width:768px){
     body{
-        font-size:1.8rem;
+        font-size:2rem;
     }
     h1{
         font-size:7rem;
@@ -108,15 +130,18 @@ h3{
 .cover-image{
    background: url(../images/hero-small.webp) no-repeat;
    background-size: cover;
-   height:100vh;
-   width:100%;
-background-position: center center;
+   min-width:100%; 
+   min-height:100vh;
+   background-position: center center;
+ 
 }
+
 
 .no-webp .cover-image{
     background: url(../images/hero-small.jpg) no-repeat;
    background-size: cover; 
 }
+
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
@@ -216,7 +241,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
 
 @media screen and (min-width:768px){
     .block{
-        --padding-vertical:10rem;
+        --padding-vertical:13rem;
         padding:var(--padding-vertical) 2rem;
     }
 }
@@ -262,6 +287,13 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
     margin-top:10rem;
 }
 
+@media screen and (min-width:600px){
+    .btn{
+        font-size:1.8rem;
+        letter-spacing: 2px; 
+    }
+}
+
 @media screen and (min-width:768px){
     .btn{
         font-size:2rem;
@@ -269,7 +301,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
     }
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:1024px){
     .btn{
         font-size:2.5rem;
     }
@@ -291,6 +323,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
 .icon--white{
     fill:#fff;
 }
+
 
 /* callopsible */
 .collapsible__header{
@@ -373,19 +406,20 @@ background-color: #f2eeeb37;
 }
 
 .nav__brand{
-padding:0.5rem 1rem;
+padding:1rem 1rem;
 }
 .nav__toggler{
-    opacity:0.2;
+    opacity:0.5;
     cursor:pointer;
     transition:box-shadow 0.15s;
-    padding:0.5rem;
+  
 }
 
 .nav.collapsible--expanded .nav__toggler{
-    opacity:0.5;
+    opacity:1;
     box-shadow:0 0 3px #666;
     border-radius:5px;
+  
 }
 
 @media screen and (min-width:768px){
@@ -411,8 +445,15 @@ padding:0.5rem 1rem;
 
     .nav-bottom-border{
         border-bottom: 0.5px solid var(--color-primary);
-     }
+     }   
+     
+     .nav__item{
+    border-bottom: none;
 }
+}
+
+
+ 
 
 /* grid */
 
